# ipytablewidgets

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  ipytablewidgets.json  karma.conf.js  package.json  postBuild  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: e2e.yml  python.yml  ts.yml
ipytablewidgets/: __init__.py  _frontend.py  _version.py  compressors.py  numpy_adapter.py  pandas_adapter.py  progressivis_adapter.py  serializers.py  source_adapter.py  traitlets.py  widgets.py
ipytablewidgets/tests/: test_compression.py  test_frontend_version.py  test_serialization.py  test_table.py  test_traitlets.py
js/: README.md  install.json  jupyter-tablewidgets.json  karma.conf.js  package.json  tsconfig.json  webpack.config.js
js/src/: compression.ts  index.ts  labplugin.ts  serializers.ts
js/src/tests/: tsconfig.json
notebooks/: plain.ipynb
src/: compression.ts  extension.ts  index.ts  serializers.ts  types.d.ts  widgets.ts
src/tests/: allSpec.ts  serializersSpec.ts
tools/: RELEASE.md  create_release.py  release_env.yml
ui-tests/: jupyter_server_config.py  package.json  playwright.config.js
ui-tests/tests/: end2end.test.ts
ui-tests/tests/notebooks/: end2end.ipynb
