[metadata]
name = ipytablewidgets
description = A set of widgets to help facilitate reuse of large tables across widgets
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
author = Jean-Daniel Fekete, Christian Poli
author_email = ipytablewidgets@inria.fr
url = https://github.com/progressivis/ipytablewidgets
keywords = ipython, jupyter, widgets
platforms = Linux, Mac OS X, Windows
[options]
packages =
    ipytablewidgets
    ipytablewidgets.tests    
install_requires =
    ipywidgets>=7.5.0,<9
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4,<2.0.0
    pandas>=1.0.0,<3.0.0
    lz4
    
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: BSD
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
python_requires = >=3.7
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=1